Fixed scrollbar issues and overlap

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -633,15 +633,22 @@ ul {
 }
 
 p.descriptor {
-  overflow-y: hidden;
   text-overflow: ellipsis;
   max-height: 200px;
+  overflow-y: scroll;
 }
 
 .outbound-link {
   text-decoration: none;
-  color: white;
-  background-color: black;
-  padding: 0.2rem;
-  border-radius: 5px;
+  color: blue;
+}
+
+.hidescroll::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hidescroll {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
